rewrite swagger
